%% Schema canonico applicativo: nomi colonna come presenti nel DB e visti dal codice Python
%% Nessun rename applicativo: le tabelle in public hanno gia' i nomi canonici
%% Le tabelle originali sono archiviate nello schema "old"
erDiagram
    masterlist {
        int id PK
        string norma
        string macroarea
        string aggregazione
        string LINEA_DI_ATTIVITA "DB: quoted LINEA DI ATTIVITA"
        string registrati "DB type: character"
        string riconosciuti "DB type: character"
    }
    piani_monitoraggio {
        int id PK
        string sezione "SEZIONE A..G"
        string alias_piano_attivita "A1, B2, C3"
        string descrizione_piano_attivita
        string alias_indicatore "A1_A, ATT AO5_A"
        string descrizione_indicatore
        boolean campionamento "True = prelievo"
        string tipo_piano_attivita "piano | attivita"
    }
    personale {
        int id PK
        string user_id "chiave logica, dedup"
        string descrizione_asl
        string descrizione_uoc
        string descrizione_uos
        string codice_fiscale
        int anno
        string namefirst
        string namelast
    }
    cu_eseguiti_nc {
        string id_controllo "identificativo logico"
        timestamp data_inizio_controllo
        string alias_piano_attivita FK
        string descrizione_piano
        string alias_indicatore FK
        string descrizione_indicatore
        string sezione
        boolean campionamento "arricchito da piani"
        string tipo_piano_attivita "arricchito da piani"
        string macroarea_cu FK
        string aggregazione_cu FK
        string attivita_cu FK
        string descrizione_asl FK
        string descrizione_uoc FK
        string descrizione_uos
        string num_registrazione
        string norma
        string num_riconoscimento
        string latitudine_stab
        string longitudine_stab
        string ragione_sociale "PII"
        string partita_iva "PII"
        string tipo_non_conformita
        int numero_nc_gravi
        int numero_nc_non_gravi
        string oggetto_non_conformita
        string comune
    }
    osa_mai_controllati {
        string ragione_sociale "identificativo primario UI"
        string asl
        string macroarea FK
        string aggregazione FK
        string attivita FK
        string comune
        string indirizzo
        string latitudine_stab
        string longitudine_stab
        string num_riconoscimento
        string provincia_stab
        string partita_iva "PII"
        string codice_fiscale "PII"
        string codice_fiscale_rappresentante "PII"
        string nominativo_rappresentante "PII"
    }
    cu_diff_programmati_eseguiti {
        int id PK
        string alias_indicatore FK
        string descrizione_indicatore
        int anno
        string descrizione_asl FK
        string descrizione_uoc FK
        string descrizione_uos
        int programmati
        int eseguiti
        string sezione "arricchito da piani"
        string alias_piano_attivita "arricchito da piani"
        string descrizione_piano "arricchito da piani"
        string tipo_piano_attivita "arricchito da piani"
        boolean campionamento "arricchito da piani"
    }
    indicatori_non_catalogati {
        string alias_indicatore PK
        string descrizione_indicatore
        string fonte "cu_eseguiti_x | cu_diff"
        timestamp data_rilevamento
    }

    masterlist ||--o{ cu_eseguiti_nc : "macroarea=macroarea_cu, aggregazione=aggregazione_cu"
    masterlist ||--o{ osa_mai_controllati : "macroarea, aggregazione, attivita"
    piani_monitoraggio ||--o{ cu_eseguiti_nc : "alias_indicatore"
    piani_monitoraggio ||--o{ cu_diff_programmati_eseguiti : "alias_indicatore"
    personale ||--o{ cu_eseguiti_nc : "descrizione_asl, descrizione_uoc"
    personale ||--o{ cu_diff_programmati_eseguiti : "descrizione_asl, descrizione_uoc"
